<resources>
    <string name="app_name">Math Game</string>
    <string name="btnStartText">start</string>
    <string name="btnRollDice1">Roll the dice</string>
    <string name="btnRollDice2">Roll again</string>
    <string name="tvQuestionMarkText">\?</string>
    <string name="divisionSignText">\u00F7</string>
    <string name="multiplicationSignText">\u00D7</string>
    <string name="additionSignText">+</string>
    <string name="subtractionSignText">-</string>
    <string name="tvDiceAText">Dice A</string>
    <string name="tvDiceBText">Dice B</string>
    <string name="tvTotalScoreText">0</string>
    <string name="btnNewGameText">new game</string>
    <string name="btnExitText">exit</string>
    <string name="tvChooseMathOperator">Operator:</string>
    <string name="tvDiceARange">Dice A Range:</string>
    <string name="tvDiceBRange">Dice B Range:</string>
    <string name="edtDiceRangeStart">1</string>
    <string name="edtDiceARangeEndText">100</string>
    <string name="edtDiceBRangeEndText">10</string>
</resources>