<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/joel_abraham_8rryjg26wr4_unsplash"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-25dp"
    tools:layout_editor_absoluteY="0dp">

    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:padding="32dp"
        android:text="@string/btnStartText"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRollDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:padding="16dp"
        android:text="@string/btnRollDice1"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799" />

    <TextView
        android:id="@+id/tvDiceA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/tvDiceAText"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMathOperator"
        app:layout_constraintEnd_toStartOf="@+id/tvMathOperator"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvMathOperator" />

    <TextView
        android:id="@+id/tvDiceB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/tvDiceBText"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvQuestionMark"
        app:layout_constraintEnd_toStartOf="@+id/tvQuestionMark"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvMathOperator"
        app:layout_constraintTop_toTopOf="@+id/tvQuestionMark"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvMathOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/divisionSignText"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDiceB"
        app:layout_constraintEnd_toStartOf="@+id/tvDiceB"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvDiceA"
        app:layout_constraintTop_toTopOf="@+id/tvDiceB" />

    <TextView
        android:id="@+id/tvQuestionMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/tvQuestionMarkText"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvDiceB"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/tvOption1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvOption2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/tvOption2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <TextView
        android:id="@+id/tvOption2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tvOption1"
        app:layout_constraintEnd_toStartOf="@id/tvOption3"
        app:layout_constraintStart_toEndOf="@+id/tvOption1"
        app:layout_constraintTop_toTopOf="@+id/tvOption1" />

    <TextView
        android:id="@+id/tvOption3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tvOption2"
        app:layout_constraintEnd_toStartOf="@id/tvOption4"
        app:layout_constraintStart_toEndOf="@id/tvOption2"
        app:layout_constraintTop_toTopOf="@+id/tvOption2" />

    <TextView
        android:id="@+id/tvOption4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tvOption3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvOption3"
        app:layout_constraintTop_toTopOf="@+id/tvOption3" />

    <TextView
        android:id="@+id/tvTotalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tvTotalScoreText"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDiceARange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/tvDiceARange"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/tvDiceBRange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvDiceBRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/tvDiceBRange"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/tvChooseMathOperator"
        app:layout_constraintStart_toStartOf="@id/tvDiceARange"
        app:layout_constraintTop_toBottomOf="@id/tvDiceARange" />

    <EditText
        android:inputType="number"
        android:text="@string/edtDiceRangeStart"
        android:backgroundTint="@color/white"
        android:id="@+id/edtDiceARangeStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tvDiceARange"
        app:layout_constraintStart_toEndOf="@id/tvDiceARange"
        app:layout_constraintTop_toTopOf="@id/tvDiceARange" />

    <TextView
        android:id="@+id/tvTo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtractionSignText"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/edtDiceARangeStart"
        app:layout_constraintEnd_toStartOf="@id/edtDiceARangeEnd"
        app:layout_constraintStart_toEndOf="@id/edtDiceARangeStart"
        app:layout_constraintTop_toTopOf="@id/edtDiceARangeStart" />

    <TextView
        android:id="@+id/tvTo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtractionSignText"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/edtDiceBRangeStart"
        app:layout_constraintEnd_toStartOf="@id/edtDiceBRangeEnd"
        app:layout_constraintStart_toEndOf="@id/edtDiceBRangeStart"
        app:layout_constraintTop_toTopOf="@id/edtDiceBRangeStart" />

    <EditText
        android:inputType="number"
        android:text="@string/edtDiceARangeEndText"
        android:backgroundTint="@color/white"
        android:id="@+id/edtDiceARangeEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tvDiceARange"
        app:layout_constraintStart_toEndOf="@id/edtDiceARangeStart"
        app:layout_constraintTop_toTopOf="@id/tvDiceARange" />

    <EditText
        android:inputType="number"
        android:text="@string/edtDiceRangeStart"
        android:backgroundTint="@color/white"
        android:id="@+id/edtDiceBRangeStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tvDiceBRange"
        app:layout_constraintStart_toEndOf="@id/tvDiceBRange"
        app:layout_constraintTop_toTopOf="@id/tvDiceBRange" />

    <EditText
        android:inputType="number"
        android:text="@string/edtDiceBRangeEndText"
        android:backgroundTint="@color/white"
        android:id="@+id/edtDiceBRangeEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tvDiceBRange"
        app:layout_constraintStart_toEndOf="@id/edtDiceBRangeStart"
        app:layout_constraintTop_toTopOf="@id/tvDiceBRange" />

    <TextView
        android:id="@+id/tvChooseMathOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvChooseMathOperator"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/tvDiceA"
        app:layout_constraintStart_toStartOf="@id/tvDiceARange"
        app:layout_constraintTop_toBottomOf="@id/tvDiceBRange" />

    <TextView
        android:id="@+id/tvAdditionOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/additionSignText"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tvChooseMathOperator"
        app:layout_constraintStart_toEndOf="@id/tvChooseMathOperator"
        app:layout_constraintTop_toTopOf="@id/tvChooseMathOperator" />

    <TextView
        android:id="@+id/tvSubtractionOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/subtractionSignText"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tvChooseMathOperator"
        app:layout_constraintStart_toEndOf="@id/tvAdditionOperator"
        app:layout_constraintTop_toTopOf="@id/tvChooseMathOperator" />

    <TextView
        android:id="@+id/tvMultiplicationOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/multiplicationSignText"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tvChooseMathOperator"
        app:layout_constraintStart_toEndOf="@id/tvSubtractionOperator"
        app:layout_constraintTop_toTopOf="@id/tvChooseMathOperator" />

    <TextView
        android:id="@+id/tvDivisionOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/divisionSignText"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tvChooseMathOperator"
        app:layout_constraintStart_toEndOf="@id/tvMultiplicationOperator"
        app:layout_constraintTop_toTopOf="@id/tvChooseMathOperator" />

    <TextView
        android:id="@+id/tvCountDownTimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvTotalScore"
        android:textSize="24sp"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        />


</androidx.constraintlayout.widget.ConstraintLayout>